@@ -1,3 +1,6 @@
+2012-01-17  6.7.4-8 Glenn Randers-Pehrson <glennrp@image...>
+  * Don't write ancillary chunks in PNG-encoded ICO files.
+
 2011-01-14  6.7.4-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-7, SVN revision 6471.
 
